--- a/app/views/partner_mailer/_send_password_recovery_mail.html.slim
+++ b/app/views/partner_mailer/_send_password_recovery_mail.html.slim
@@ -3,7 +3,7 @@
     .holder
       .subject Recuperação de Conta SacGpt
       .container__box
-        p.container__intro Prezado(a) <strong>#{@resource.name},</strong>
+        p.container__intro Prezado(a) <strong>#{@partner.name},</strong>
         br
         br
         p.container__text Recebemos uma solicitação de recuperação de conta para o seu perfil no SacGpt. Sabemos o quanto é importante para você manter o acesso à nossa plataforma, e estamos aqui para ajudar.
@@ -11,7 +11,9 @@
         p.container__text Se você não solicitou essa recuperação, por favor, ignore este e-mail. Caso contrário, siga as instruções abaixo para redefinir a sua senha e recuperar o acesso à sua conta:
         br
         p.container__text 1 - Clique no link abaixo para redefinir sua senha:
-        = link_to 'Recuperar senha', reset_password_url(@resource.class.to_s.downcase, reset_password_token: @token, email: @resource.email), class: "btn"
+        br
+        a href="https:/sac/recover_password/#{@recover_token}" Recuperar Senha
+        br
         p.container__text 2 - Siga as instruções na página para criar uma nova senha segura.
 
         p.container__text Lembramos que, por motivos de segurança, o link de redefinição de senha é válido por [X horas/dias]. Se você não redefinir sua senha dentro desse período, será necessário solicitar uma nova recuperação de conta.
@@ -22,5 +24,4 @@
         br
         br
         p.container__text Atenciosamente,
-        p.container__text [Seu Nome]
         p.container__text Equipe SacGpt
