feat: implemented active for partners

--- a/app/views/partner_mailer/_send_password_recovery_mail.html.slim
+++ b/app/views/partner_mailer/_send_password_recovery_mail.html.slim
@@ -12,7 +12,7 @@
         br
         p.container__text 1 - Clique no link abaixo para redefinir sua senha:
         br
-        a href="https:/sac/recover_password/#{@recover_token}" Recuperar Senha
+        a href="#{ENV['WEB_PAGE']}recuperacao/#{@recover_token}" Recuperar Senha
         br
         p.container__text 2 - Siga as instruções na página para criar uma nova senha segura.
 
