--- a/app/views/payment_plan_mailer/_send_alert_exchange_card_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_alert_exchange_card_mail.html.slim
@@ -12,10 +12,12 @@
 
         p.container__text <strong>Detalhes da Troca de Cartão de Crédito:</strong>
         br
-        p.container__text - Assinatura: [Nome do Plano]
-        p.container__text - Antigo Cartão: [Últimos 4 dígitos do Cartão Antigo]
-        p.container__text - Novo Cartão: [Últimos 4 dígitos do Novo Cartão]
-        p.container__text - Data da Troca: [Data da Troca de Cartão]
+        p.container__text - Numero: #{@credit_card.number} 
+        p.container__text - Nome: #{@credit_card.holder_name} 
+        p.container__text - Data de expiração: #{@credit_card.expires_at} 
+        p.container__text - Marca: #{@credit_card.brand} 
+
+        p.container__text - Data da Troca: #{@credit_card.created_at.strftime("%d/%m/%Y")} 
         br
         br
         p.container__text Agradecemos por manter sua assinatura conosco. Para garantir a continuidade do acesso aos recursos do seu plano, atualizamos o método de pagamento para o novo cartão de crédito informado.
@@ -28,5 +30,4 @@
         br
         br
         p.container__text Atenciosamente,
-        p.container__text [Seu Nome]
         p.container__text Equipe SacGpt
