feat: fixes and notification implemented

--- a/app/views/payment_plan_mailer/_send_alert_exchange_card_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_alert_exchange_card_mail.html.slim
@@ -1,14 +1,14 @@
 .container
   .container__bg
     .holder
-      .subject Aviso de Troca de Cartão de Crédito no SacGpt
+      .subject Aviso de Troca de Cartão de Crédito no SacGPT
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
         p.container__intro Prezado(a) <strong>#{@partner.name},</strong>
         br
         br
-        p.container__text Esperamos que este e-mail o(a) encontre bem. Gostaríamos de informar sobre uma recente atualização em relação ao método de pagamento associado à sua assinatura no SacGpt.
+        p.container__text Esperamos que este e-mail o(a) encontre bem. Gostaríamos de informar sobre uma recente atualização em relação ao método de pagamento associado à sua assinatura no SacGPT.
 
         p.container__text <strong>Detalhes da Troca de Cartão de Crédito:</strong>
         br
@@ -26,8 +26,8 @@
 
         p.container__text Se você tiver alguma pergunta ou precisar de assistência, nossa equipe de suporte está à disposição. Entre em contato através do e-mail [endereço de e-mail de suporte] ou pelo telefone [número de telefone de suporte].
 
-        p.container__text Agradecemos novamente por escolher o SacGpt. Estamos aqui para garantir uma experiência contínua e eficaz no atendimento virtual da sua empresa.
+        p.container__text Agradecemos novamente por escolher o SacGPT. Estamos aqui para garantir uma experiência contínua e eficaz no atendimento virtual da sua empresa.
         br
         br
         p.container__text Atenciosamente,
-        p.container__text Equipe SacGpt
+        p.container__text Equipe SacGPT
