--- a/app/views/partner_mailer/_send_new_lead_received_mail.html.slim
+++ b/app/views/partner_mailer/_send_new_lead_received_mail.html.slim
@@ -1,31 +1,29 @@
 .container
   .container__bg
     .holder
-      .subject Nova Lead Recebida: [Nome da Lead] - SacGpt
+      .subject Novo Lead Recebido: #{@client.name} - SacGPT
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
         p.container__intro Prezado(a) <strong>#{@partner.name},</strong>
         br
         br
-        p.container__text Gostaríamos de informar que uma nova lead foi recebida através da plataforma SacGpt. Estamos entusiasmados em compartilhar essa atualização com você.
+        p.container__text Gostaríamos de informar que uma novo lead foi recebida através da plataforma SacGPT. Estamos entusiasmados em compartilhar essa atualização com você.
 
-        p.container__text <strong>Detalhes da Nova Lead:</strong>
+        p.container__text <strong>Detalhes da Novo Lead:</strong>
         br
-        p.container__text - Nome: [Nome da Lead]
-        p.container__text - Empresa: [Nome da Empresa da Lead]
-        p.container__text - E-mail: [E-mail da Lead]
-        p.container__text - Telefone: [Telefone da Lead]
-        p.container__text - Mensagem: [Mensagem Inicial da Lead]
-        p.container__text - Data e Hora: [Data e Hora do Recebimento]
+        p.container__text - Nome: #{@client.name}
+        p.container__text - Telefone: #{@client.phone.split('@')[0]}
+        p.container__text - Mensagem: #{@lead.message}
+        p.container__text - Data e Hora: #{@lead.created_at.strftime("%m/%d/%Y %I:%M %p")}
         br
         br
-        p.container__text Agradecemos por confiar no SacGpt para ajudar a capturar e gerenciar leads de forma eficaz. A sua plataforma de atendimento virtual está contribuindo para conectar a sua empresa com potenciais clientes de maneira mais rápida e conveniente.
-        p.container__text Para visualizar mais detalhes ou tomar medidas em relação a esta lead, acesse a sua conta SacGpt e vá para a seção de gerenciamento de leads.
+        p.container__text Agradecemos por confiar no SacGPT para ajudar a capturar e gerenciar leads de forma eficaz. A sua plataforma de atendimento virtual está contribuindo para conectar a sua empresa com potenciais clientes de maneira mais rápida e conveniente.
+        p.container__text Para visualizar mais detalhes ou tomar medidas em relação a esta lead, acesse a sua conta SacGPT e vá para a seção de gerenciamento de leads.
         p.container__text Se você tiver alguma pergunta ou precisar de assistência, nossa equipe de suporte está à disposição. Entre em contato através do e-mail [endereço de e-mail de suporte] ou pelo telefone [número de telefone de suporte].
-        p.container__text Agradecemos pela sua confiança no SacGpt para impulsionar o crescimento dos seus negócios. Estamos aqui para apoiá-lo(a) em todas as etapas.
+        p.container__text Agradecemos pela sua confiança no SacGPT para impulsionar o crescimento dos seus negócios. Estamos aqui para apoiá-lo(a) em todas as etapas.
         br
         br
         p.container__text Atenciosamente,
-        p.container__text [Seu Nome]
-        p.container__text Equipe SacGpt
+        p.container__text #{@partner.name}
+        p.container__text Equipe SacGPT
