--- a/app/views/payment_plan_mailer/_send_subscription_confirmation_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_subscription_confirmation_mail.html.slim
@@ -1,14 +1,14 @@
 .container
   .container__bg
     .holder
-      .subject Confirmação de Assinatura do Plano SacGpt
+      .subject Confirmação de Assinatura do Plano SacGPT
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
         p.container__intro Prezado(a) <strong>#{@subscription.partner.name},</strong>
         br
         br
-        p.container__text É com grande satisfação que confirmamos a sua assinatura do plano [Nome do Plano] no SacGpt! Bem-vindo(a) à nossa comunidade de clientes comprometidos com um atendimento virtual de qualidade e eficiência.
+        p.container__text É com grande satisfação que confirmamos a sua assinatura do plano [Nome do Plano] no SacGPT! Bem-vindo(a) à nossa comunidade de clientes comprometidos com um atendimento virtual de qualidade e eficiência.
 
         p.container__text <strong>Detalhes da Sua Assinatura:</strong>
         br
@@ -18,17 +18,17 @@
         p.container__text - Valor: #{@subscription.payment_plan.plan_price_value / 100}
         br
         br
-        p.container__text Agradecemos por escolher o SacGpt para otimizar o atendimento ao cliente da sua empresa. A sua assinatura nos permite continuar desenvolvendo e aprimorando nossas soluções de atendimento virtual, visando sempre atender às suas necessidades e proporcionar uma experiência excepcional.
+        p.container__text Agradecemos por escolher o SacGPT para otimizar o atendimento ao cliente da sua empresa. A sua assinatura nos permite continuar desenvolvendo e aprimorando nossas soluções de atendimento virtual, visando sempre atender às suas necessidades e proporcionar uma experiência excepcional.
 
         p.container__text A partir de agora, você terá acesso a todos os recursos exclusivos do seu plano, incluindo [listar recursos ou benefícios específicos do plano]. Para começar a aproveitar ao máximo a sua assinatura, siga os seguintes passos:
 
-        p.container__text 1 - Faça login na sua conta SacGpt usando suas credenciais de assinante.
+        p.container__text 1 - Faça login na sua conta SacGPT usando suas credenciais de assinante.
         p.container__text 2 - Explore e utilize os recursos do plano para melhorar a eficiência e a qualidade do seu atendimento ao cliente.
         br
         p.container__text 3 - Caso tenha dúvidas ou precise de suporte, nossa equipe de atendimento está pronta para ajudar. Entre em contato através do e-mail [endereço de e-mail de suporte] ou pelo telefone [número de telefone de suporte].
         br
-        p.container__text Mais uma vez, agradecemos por escolher o SacGpt como parceiro para aprimorar o atendimento da sua empresa. Estamos ansiosos para ajudá-lo(a) a alcançar seus objetivos de negócios com nossas soluções de atendimento virtual.
+        p.container__text Mais uma vez, agradecemos por escolher o SacGPT como parceiro para aprimorar o atendimento da sua empresa. Estamos ansiosos para ajudá-lo(a) a alcançar seus objetivos de negócios com nossas soluções de atendimento virtual.
         br
         br
         p.container__text Atenciosamente,
-        p.container__text Equipe SacGpt
+        p.container__text Equipe SacGPT
