--- a/app/views/payment_plan_mailer/_send_cancellation_plan_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_cancellation_plan_mail.html.slim
@@ -5,7 +5,7 @@
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
-        p.container__intro Prezado(a) <strong>#{@subscription.partner.name},</strong>
+        p.container__intro Saudações <strong>#{@subscription.partner.name},</strong>
         br
         br
         p.container__text Recebemos a sua solicitação de cancelamento do plano [Nome do Plano] no SacGPT. Lamentamos ver você partir e gostaríamos de agradecer por ter sido parte da nossa comunidade.
@@ -14,9 +14,9 @@
         br
         p.container__text - Plano: #{@subscription.payment_plan.name}        
         p.container__text - Data de Cancelamento: #{@subscription.updated_at.strftime("%d/%m/%Y")}
+        br
         p.container__text Entendemos que as necessidades podem mudar, e respeitamos a sua decisão. Se houver algum feedback que você gostaria de compartilhar sobre a sua experiência com o SacGPT, ficaríamos felizes em ouvir.
         p.container__text Por favor, esteja ciente de que, após o cancelamento, você não terá mais acesso aos recursos e benefícios do plano a partir de [Data de Cancelamento]. Caso mude de ideia ou deseje retomar a assinatura, você sempre será bem-vindo(a) de volta.
-        br
         br
         p.container__text Se você tiver alguma pergunta ou precisar de assistência, nossa equipe de suporte está à disposição. Entre em contato através do e-mail [endereço de e-mail de suporte] ou pelo telefone [número de telefone de suporte].
         p.container__text Mais uma vez, agradecemos por ter escolhido o SacGPT para aprimorar o atendimento da sua empresa. Desejamos sucesso contínuo em seus empreendimentos futuros.
