--- a/app/views/payment_plan_mailer/_send_renovation_plan_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_renovation_plan_mail.html.slim
@@ -5,7 +5,7 @@
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
-        p.container__intro Prezado(a) <strong>#{@partner.name},</strong>
+        p.container__intro Saudações <strong>#{@partner.name},</strong>
         br
         br
         p.container__text Sua assinatura mensal do plano [Nome do Plano] está prestes a ser renovada automaticamente em [Data de Renovação]. Agradecemos por confiar no SacGPT para otimizar seu atendimento ao cliente.
@@ -15,14 +15,14 @@
         p.container__text - Plano: [Nome do Plano]
         p.container__text - Data de Renovação: [Data de Renovação]
         p.container__text - Valor: [Valor do Plano]
-        p.container__text Nenhuma ação é necessária para a renovação, e o valor será debitado do seu método de pagamento cadastrado.
+        br
+        p.container__text <strong>Nenhuma ação é necessária para a renovação, e o valor será debitado do seu método de pagamento cadastrado.</strong>
         br
         br
         p.container__text Para ajustes na assinatura, acesse sua conta SacGPT. Precisa de suporte? Entre em contato via [endereço de e-mail de suporte] ou [número de telefone de suporte].
-
+        br
         p.container__text Agradecemos pela sua confiança e esperamos continuar aprimorando o seu atendimento.
         br
         br
         p.container__text Atenciosamente,
-        p.container__text [Seu Nome]
         p.container__text Equipe SacGPT
