refact: emails, subcriptions and credit card edit

--- a/app/views/admin_mailer/_send_recovery_password.html.slim
+++ b/app/views/admin_mailer/_send_recovery_password.html.slim
@@ -1,14 +1,14 @@
 .container
   .container__bg
     .holder
-      .subject Recuperação de Senha - SacGPT
+      .subject Recuperação de Senha - SacGpt
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
         p.container__intro Prezado(a) <strong>#{@admin.name},</strong>
         br
         br
-        p.container__text Recebemos uma solicitação de recuperação de senha para a sua conta de administrador no SacGPT. Se você não fez essa solicitação, por favor, ignore este e-mail.
+        p.container__text Recebemos uma solicitação de recuperação de senha para a sua conta de administrador no SacGpt. Se você não fez essa solicitação, por favor, ignore este e-mail.
         p.container__text Para redefinir sua senha e acessar sua conta novamente, siga as instruções abaixo:
         br
         br
@@ -21,9 +21,12 @@
         br
         br
         p.container__text Se você tiver qualquer dúvida ou precisar de assistência, entre em contato com nossa equipe de suporte através do e-mail [endereço de e-mail de suporte] ou pelo telefone [número de telefone de suporte].
-        p.container__text Agradecemos por confiar no SacGPT para auxiliar na administração da plataforma. Estamos aqui para ajudar a garantir um acesso seguro e contínuo.
+        p.container__text Agradecemos por confiar no SacGpt para auxiliar na administração da plataforma. Estamos aqui para ajudar a garantir um acesso seguro e contínuo.
         br
         br
         p.container__text Atenciosamente,
         p.container__text [Seu Nome]
-        p.container__text Equipe SacGPT
+        p.container__text Equipe SacGpt
+
+
+
