--- a/app/views/payment_plan_mailer/_send_renovation_plan_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_renovation_plan_mail.html.slim
@@ -1,14 +1,14 @@
 .container
   .container__bg
     .holder
-      .subject Renovação de Plano Mensal SacGPT
+      .subject Renovação de Plano Mensal SacGpt
       / .container__images style="background: url('#{banner_url}')"
 
       .container__box
-        p.container__intro Saudações <strong>#{@partner.name},</strong>
+        p.container__intro Saudações, <strong>#{@partner.name}</strong>
         br
         br
-        p.container__text Sua assinatura mensal do plano [Nome do Plano] está prestes a ser renovada automaticamente em [Data de Renovação]. Agradecemos por confiar no SacGPT para otimizar seu atendimento ao cliente.
+        p.container__text Sua assinatura mensal do plano [Nome do Plano] está prestes a ser renovada automaticamente em [Data de Renovação]. Agradecemos por confiar no SacGpt para otimizar seu atendimento ao cliente.
 
         p.container__text <strong>Detalhes da Renovação:</strong>
         br
@@ -19,10 +19,10 @@
         p.container__text <strong>Nenhuma ação é necessária para a renovação, e o valor será debitado do seu método de pagamento cadastrado.</strong>
         br
         br
-        p.container__text Para ajustes na assinatura, acesse sua conta SacGPT. Precisa de suporte? Entre em contato via [endereço de e-mail de suporte] ou [número de telefone de suporte].
+        p.container__text Para ajustes na assinatura, acesse sua conta SacGpt. Precisa de suporte? Entre em contato via [endereço de e-mail de suporte] ou [número de telefone de suporte].
         br
         p.container__text Agradecemos pela sua confiança e esperamos continuar aprimorando o seu atendimento.
         br
         br
         p.container__text Atenciosamente,
-        p.container__text Equipe SacGPT
+        p.container__text Equipe SacGpt
